# NeMo

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  DEPENDENCIES.txt  INSTALL  README  README.in  README.md  README.md~  description.txt
CMake/: .gitignore  LinkStaticMSVCR.cmake  SetRpath.cmake  cmake_uninstall.cmake.in
doc/: CMakeLists.txt
doc/api_html/: CMakeLists.txt  Doxyfile.in
doc/dev_html/: CMakeLists.txt  Doxyfile.in
doc/man/: CMakeLists.txt  Doxyfile.in
doc/man/man3/: nemo-c.3  nemo.3  nemo_Configuration.3  nemo_Network.3  nemo_Simulation.3
doc/manual/: .gitignore  CMakeLists.txt
doc/manual/src/: example.m  example.py  manual.bib  manual.tex  title.tex.in
src/: CMakeLists.txt  nemo.h  nemo.hpp
src/api/: CMakeLists.txt
src/api/autogen/: API.hs  C.hs  Codegen.hs  Common.hs  Cpp.hs  Latex.hs  Main.hs  Matlab.hs  Python.hs
src/api/matlab/: CMakeLists.txt  example.m  example2.m  install.cmake  nemo.m  nemoAddNeuron.m  nemoAddNeuronType.m  nemoAddSynapse.m  nemoApplyStdp.m  nemoBackendDescription.m  nemoClearNetwork.m  nemoCreateSimulation.m  nemoDestroySimulation.m  nemoElapsedSimulation.m  nemoElapsedWallclock.m  nemoGetDelays.m  nemoGetMembranePotential.m  nemoGetNeuronParameter.m  nemoGetNeuronState.m  nemoGetPlastic.m  nemoGetSynapseDelay.m  nemoGetSynapsePlastic.m  nemoGetSynapseSource.m  nemoGetSynapseTarget.m  nemoGetSynapseWeight.m  nemoGetSynapsesFrom.m  nemoGetTargets.m  nemoGetWeights.m  nemoLogStdout.m  nemoNeuronCount.m  nemoReset.m  nemoResetConfiguration.m  nemoResetTimer.m  nemoSetCpuBackend.m  nemoSetCudaBackend.m  nemoSetNeuron.m  nemoSetNeuronParameter.m  nemoSetNeuronState.m  nemoSetStdpFunction.m  nemoSetWriteOnlySynapses.m  (+2 more)
src/api/matlab/kuramoto/: CMakeLists.txt  example.m  nemoCoupleOscillators.m  nemoGetPhase.m
src/api/matlab/sources/: addNeuron.in.m  nemo.footer.mex  nemo.header.mex  nemo.m.footer  nemo.m.header  setNeuron.in.m  step.in.m
src/api/python/: CMakeLists.txt  __init__.py  __init__.py.in  docstrings.h  example.py  nemo_py.cpp  setup.py.in  test.py  wrappers.py  wrappers.py.in
src/api/python/utils/: connectivity.py  firing.py
src/app/: CMakeLists.txt  nemo.cpp
src/examples/: CMakeLists.txt  common.cpp  common.hpp  examples.hpp  kuramoto.cpp  mpi_example.cpp  random.cpp  randomNetUtils.cpp  randomNetUtils.hpp  torus.cpp
src/gui/: .gitignore  FiringPlot.cpp  FiringPlot.hpp  MainWindow.cpp  MainWindow.hpp  gui.pro  main.cpp
src/mpi/: CMakeLists.txt  Mapper.cpp  Mapper.hpp  Master.cpp  Master.hpp  MpiTimer.cpp  MpiTimer.hpp  MpiTypes.hpp  SpikeQueue.cpp  SpikeQueue.hpp  Worker.cpp  Worker.hpp  WorkerLogger.cpp  WorkerLogger.hpp  mpiUtils.cpp  mpiUtils.hpp
src/nemo/: Axon.cpp  Axon.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  ConfigurationImpl.cpp  ConfigurationImpl.hpp  ConnectivityMatrix.cpp  ConnectivityMatrix.hpp  FiringBuffer.cpp  FiringBuffer.hpp  Mapper.hpp  Network.cpp  Network.hpp  NetworkImpl.cpp  NetworkImpl.hpp  Neuron.cpp  Neuron.hpp  NeuronType.cpp  NeuronType.hpp  Neurons.cpp  Neurons.hpp  OutgoingDelays.cpp  OutgoingDelays.hpp  Plugin.cpp  Plugin.hpp  RNG.cpp  RNG.hpp  RandomMapper.hpp  ReadableNetwork.cpp  ReadableNetwork.hpp  Simulation.cpp  Simulation.hpp  SimulationBackend.cpp  SimulationBackend.hpp  StdpFunction.cpp  StdpFunction.hpp  StdpProcess.cpp  StdpProcess.hpp  Timer.hpp  (+14 more)
src/nemo/construction/: RCM.cpp  RCM.hpp
src/nemo/cpu/: CMakeLists.txt  Neurons.cpp  Neurons.hpp  Simulation.cpp  Simulation.hpp
src/nemo/cpu/plugins/: BayesianNeuron.cpp  CMakeLists.txt  CMakeLists.txt~  HH.cpp  IF_curr_exp.cpp  InhomogeneousPoissonSource.cpp  Input.cpp  Izhikevich.cpp  Izhikevich2007.cpp  Izhikevich2007.cpp~  Izhikevich2007DopSyn.cpp  IzhikevichChaos.cpp  IzhikevichSyn.cpp  Kuramoto.cpp  KuramotoLag.cpp  PoissonSource.cpp  QIF.cpp  default_init.c  neuron_model.h
src/nemo/cuda/: Bitvector.cpp  Bitvector.hpp  CMakeLists.txt  ConnectivityMatrix.cpp  ConnectivityMatrix.hpp  DeviceAssertions.cpp  DeviceAssertions.hpp  FiringBuffer.cpp  FiringBuffer.hpp  FiringStimulus.cpp  FiringStimulus.hpp  GlobalQueue.cpp  GlobalQueue.hpp  LocalQueue.cpp  LocalQueue.hpp  Mapper.hpp  NVector.hpp  NVector.ipp  Neurons.cpp  Neurons.hpp  Outgoing.cpp  Outgoing.hpp  Simulation.cpp  Simulation.hpp  applySTDP.cu  bitvector.cu  bitvector.cu_h  compact.cu  create_simulation.cpp  create_simulation.hpp  current.cu  delays.cu  device_assert.cu  device_assert.cu_h  device_memory.cpp  device_memory.hpp  devices.cpp  devices.hpp  double_buffer.cu  exception.hpp  (+26 more)
src/nemo/cuda/construction/: FcmIndex.cpp  FcmIndex.hpp
src/nemo/cuda/plugins/: CMakeLists.txt  HH.cu  IF_curr_exp.cu  Input.cu  Izhikevich.cu  IzhikevichRS.cu  Kuramoto.cu  PoissonSource.cu  QIF.cu  default_init.c  neuron_model.h
src/nemo/cuda/runtime/: Delays.cpp  Delays.hpp  RCM.cpp  RCM.hpp
src/nemo/network/: Generator.hpp  iterator.hpp
src/nemo/network/programmatic/: neuron_iterator.hpp  synapse_iterator.hpp
src/nemo/plugins/: BayesianNeuron.h  BayesianNeuron.ini  CMakeLists.txt  HH.ini  IF_curr_exp.h  IF_curr_exp.ini  InhomogeneousPoissonSource.ini  Input.ini  Izhikevich.h  Izhikevich.ini  Izhikevich2007.h  Izhikevich2007.ini  Izhikevich2007DopSyn.h  Izhikevich2007DopSyn.ini  IzhikevichChaos.ini  IzhikevichMSN.cpp  IzhikevichSyn.h  IzhikevichSyn.ini  Kuramoto.h  Kuramoto.ini  KuramotoLag.h  KuramotoLag.ini  PoissonSource.ini  QIF.h  QIF.ini
src/nemo/runtime/: RCM.cpp  RCM.hpp
src/test/: CMakeLists.txt  IF_curr_exp.cpp  Input.cpp  Kuramoto.cpp  PoissonSource.cpp  c_api.cpp  c_api.hpp  create_rtest_data.cpp  mpi_test.cpp  networks.cpp  rtest.cpp  rtest.hpp  serialisation.cpp  stdp.cpp  test.cpp  test.hpp  utils.cpp  utils.hpp
src/test/matlab/: api.m  create_regression_data.m  fstim.m  regression.m  test.m  testNeuronGetSet.m  vectorized.m
utilities/: benchmark.sh  cmds.txt  config.xml  general-hosts.txt  gpu-hosts.txt  offline.txt
