FIND_PACKAGE(Boost REQUIRED COMPONENTS python)
FIND_PACKAGE(PythonLibs REQUIRED)

IF(WIN32)
	ADD_DEFINITIONS(-DBOOST_PYTHON_STATIC_LIB)
ENDIF(WIN32)
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/src
	${CMAKE_BINARY_DIR}/src
	${Boost_INCLUDE_DIR}
	${PYTHON_INCLUDE_PATH}
)

LINK_STATIC_MSVCR()

SET(BUILD_SHARED_LIBS TRUE)

ADD_LIBRARY(nemo_py nemo_py.cpp)

SET_TARGET_PROPERTIES(nemo_py PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(nemo_py PROPERTIES OUTPUT_NAME "_nemo")
IF(WIN32)
	SET_TARGET_PROPERTIES(nemo_py PROPERTIES SUFFIX ".pyd")
ENDIF(WIN32)
TARGET_LINK_LIBRARIES(nemo_py nemo ${Boost_LIBRARIES} ${PYTHON_LIBRARY})

IF(WIN32)
	SET(INSTALL_DIR Python)
ELSE(WIN32)
	SET(INSTALL_DIR share/nemo/python)
ENDIF(WIN32)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/setup.py.in ${CMAKE_CURRENT_BINARY_DIR}/setup.py @ONLY)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/__init__.py.in ${CMAKE_CURRENT_BINARY_DIR}/__init__.py @ONLY)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/wrappers.py.in ${CMAKE_CURRENT_BINARY_DIR}/wrappers.py @ONLY)

INSTALL(
	TARGETS nemo_py
	DESTINATION ${INSTALL_DIR})
INSTALL(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/__init__.py
	DESTINATION ${INSTALL_DIR}/nemo)
INSTALL(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/wrappers.py
	DESTINATION ${INSTALL_DIR}/nemo)
INSTALL(
	PROGRAMS example.py test.py ${CMAKE_CURRENT_BINARY_DIR}/setup.py
	DESTINATION ${INSTALL_DIR})
