INSTALL(FILES
        Input.ini
        PoissonSource.ini
        InhomogeneousPoissonSource.ini
        Izhikevich.ini
        IF_curr_exp.ini
        Kuramoto.ini
        KuramotoLag.ini
        QIF.ini
        HH.ini
        IzhikevichChaos.ini
        Izhikevich2007DopSyn.ini
        Izhikevich2007.ini
	DESTINATION ${NEMO_SYSTEM_PLUGIN_DIR})
