CUDA_INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/src
	${CMAKE_SOURCE_DIR}/src/nemo/cuda
  )

SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-DNEMO_PLUGIN_EXPORTS")

FUNCTION(PLUGIN PLUGIN_NAME)
	SET(TARGET ${PLUGIN_NAME}_cuda)
	CUDA_ADD_LIBRARY(${TARGET} SHARED ${PLUGIN_NAME}.cu)
	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES OUTPUT_NAME ${PLUGIN_NAME})
	INSTALL(TARGETS ${TARGET} DESTINATION ${NEMO_SYSTEM_PLUGIN_DIR}/cuda)
ENDFUNCTION(PLUGIN)

PLUGIN(Input)
PLUGIN(PoissonSource)
PLUGIN(Izhikevich)
PLUGIN(IzhikevichRS)
PLUGIN(IF_curr_exp)
PLUGIN(Kuramoto)
PLUGIN(QIF)
PLUGIN(HH)

